--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <iframe style="height:900px;width:900px;max-width:90%;max-height:90%;border:none;"  src="https://testweb.recruitcrm.io/jobs/Recruit_CRM_4_jobs"> </iframe>
+  <iframe style="height:900px;width:100vw;max-width:100vw;max-height:90%;border:none;"  src="https://testweb.recruitcrm.io/jobs/Recruit_CRM_4_jobs"> </iframe>
 
 </body>
 
